GROOVY-10005: Remove groovy-jaxb module from Groovy 4 (closes #1539)